--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 name: dosic
 title: dosic
-description: Jekyll Theme Minimal Resume
+description: testing page
 baseurl: /
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
