--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ baseurl: /
 
 # User settings
 username: dosic
-user_description: open source test
-user_title: Software Engineer
-email: mauriurraco@gmail.com
+user_description: open source testting
+user_title: PKNU student
+email: dosic@gmail.com
 # twitter_username: lorem_ipsum
 instagram_username: mauriciourraco7
 facebook_username: mauricio.urraco
